@@ -7,8 +7,10 @@ from __future__ import annotations
 import os
 from pathlib import Path
 
+import pytest
 from pytest import CaptureFixture
 
+from pylint.config.exceptions import _UnrecognizedOptionError
 from pylint.lint import Run
 from pylint.testutils.configuration_test import run_using_a_configuration_file
 
@@ -58,3 +60,11 @@ def test_unknown_message_id(capsys: CaptureFixture) -> None:
     Run([str(EMPTY_MODULE), "--disable=12345"], exit=False)
     output = capsys.readouterr()
     assert "Command line:1:0: E0012: Bad option value for --disable." in output.out
+
+
+def test_unknown_option_name(capsys: CaptureFixture) -> None:
+    """Check that we correctly raise a message on an unknown option."""
+    with pytest.raises(_UnrecognizedOptionError):
+        Run([str(EMPTY_MODULE), "--unknown-option=yes"], exit=False)
+    output = capsys.readouterr()
+    assert "E0015: Unrecognized option found: unknown-option=yes" in output.out
